cmake_minimum_required(VERSION 3.7)
project(sorver)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(formatter STATIC /home/madennfloss/MadennFloss/workspace/tasks/lab03/formatter_ex_lib/formatter_ex.cpp)
add_library(solver STATIC /home/madennfloss/MadennFloss/workspace/tasks/lab03/solver_lib/solver.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib)
